more file reading examples

--- a/5_files.ipynb
+++ b/5_files.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMa42dYl0YEmIs7biqLd/Xr",
+      "authorship_tag": "ABX9TyNLMnQn1vomNjEeT5xPel3c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "_Zl9WARZsFu_"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -109,10 +109,10 @@
       "cell_type": "code",
       "source": [
         "fulltext = open('./myfile.txt', 'r').read()\n",
-        "print(\"full text\", fulltext)\n",
+        "print(\"full text\\n\", fulltext)\n",
         "\n",
         "lines = open('./myfile.txt', 'r').readlines()\n",
-        "print(\"all lines\", lines)\n",
+        "print(\"all lines\\n\", lines)\n",
         "for num, line in enumerate(lines):\n",
         "  print(num, line)"
       ],
@@ -121,21 +121,51 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wedv55WJtC44",
-        "outputId": "47711e9f-fe5d-4fa7-f5ee-2b764bfa008e"
+        "outputId": "4f9a10a5-4aaf-4207-faef-fdae2fcf946e"
       },
-      "execution_count": 9,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "full text line 1 writing to file\n",
-            "line 2 writing to file\n",
+            "full text\n",
+            " line 1 written to file\n",
+            "line 2 written to file\n",
             "\n",
-            "all lines ['line 1 writing to file\\n', 'line 2 writing to file\\n']\n",
-            "0 line 1 writing to file\n",
+            "all lines\n",
+            " ['line 1 written to file\\n', 'line 2 written to file\\n']\n",
+            "0 line 1 written to file\n",
             "\n",
-            "1 line 2 writing to file\n",
+            "1 line 2 written to file\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "infile = open('./myfile.txt', 'r')\n",
+        "while line := infile.readline():\n",
+        "  print(line)"
+      ],
+      "metadata": {
+        "id": "m7R9kIZj5nv1",
+        "outputId": "b88c42cb-f623-421f-8d7c-1ec1250b2ed1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "line 1 written to file\n",
+            "\n",
+            "line 2 written to file\n",
             "\n"
           ]
         }
