add reading link

--- a/5_files.ipynb
+++ b/5_files.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLMnQn1vomNjEeT5xPel3c",
+      "authorship_tag": "ABX9TyNouBR9XAQ/g8281f7Vdq/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,8 @@
       "source": [
         "### Reading\n",
         "\n",
-        "- https://www.tutorialspoint.com/python/python_file_handling.htm"
+        "- https://www.tutorialspoint.com/python/python_file_handling.htm\n",
+        "- https://www.tutorialspoint.com/python/python_string_methods.htm"
       ],
       "metadata": {
         "id": "_oAmcWfbuk8-"
@@ -151,11 +152,11 @@
         "  print(line)"
       ],
       "metadata": {
-        "id": "m7R9kIZj5nv1",
-        "outputId": "b88c42cb-f623-421f-8d7c-1ec1250b2ed1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m7R9kIZj5nv1",
+        "outputId": "b88c42cb-f623-421f-8d7c-1ec1250b2ed1"
       },
       "execution_count": 7,
       "outputs": [
@@ -167,6 +168,60 @@
             "\n",
             "line 2 written to file\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "line = 'line 1 written to file\\n'.strip()\n",
+        "print(line)\n",
+        "words = line.split(\" \")\n",
+        "print(words)\n",
+        "print(len(words))"
+      ],
+      "metadata": {
+        "id": "BnMXfplt6thK",
+        "outputId": "57bc2f82-4133-4386-b570-1d7f6aa202f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "line 1 written to file\n",
+            "['line', '1', 'written', 'to', 'file']\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "line = 'line 1 written to file\\n'.strip()\n",
+        "word = \"1234567890\"\n",
+        "print(word.count(\"3\"))"
+      ],
+      "metadata": {
+        "id": "FzNVioKD7oAl",
+        "outputId": "3338393e-3779-4202-9303-42c72a16ed5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
           ]
         }
       ]
