--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnDYfm5qX7JFJHENI/OdDl",
+      "authorship_tag": "ABX9TyO9X9Sepb2P7yKioKVKrmgX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,19 @@
       ],
       "metadata": {
         "id": "p7cCDt2kavQR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Collections\n",
+        "\n",
+        "Python supports `collections` of data that contain multiple values.\n",
+        "\n",
+        "Collections can be `sequences` of similar values (aka lists) or more complex structures."
+      ],
+      "metadata": {
+        "id": "Z12C21Y0eIsG"
       }
     },
     {
@@ -251,6 +264,83 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Iteration** - programs can operate on each item in a list, one at a time"
+      ],
+      "metadata": {
+        "id": "q5xtrbZkfNny"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for item in list1:\n",
+        "  print(item)\n",
+        "\n",
+        "for i, item in enumerate(list1):\n",
+        "  print(i, item)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ffN_7OpLfT0H",
+        "outputId": "b7dc3a89-6c63-4a9b-cc8d-8e5701799a04"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n",
+            "0 a\n",
+            "1 b\n",
+            "2 c\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Membership** - programs can check if a list contains a value"
+      ],
+      "metadata": {
+        "id": "Y3NQsfw8fbn2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list1 = ['a','b','c']\n",
+        "'a' in list1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zNsarN-EfkVr",
+        "outputId": "d1f6061d-954c-46f0-c20b-5a72ba66ad25"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     }
