--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9X9Sepb2P7yKioKVKrmgX",
+      "authorship_tag": "ABX9TyOnyxUfCMvR4Id9PUUDOmcD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -343,6 +343,51 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Other built-in Python methods relevant for lists:\n",
+        "- max(<list>)\n",
+        "- min(<list>)\n",
+        "- cmp(<list1>, <list2>)\n",
+        "- list<tuple>) - converts a tuple to a list"
+      ],
+      "metadata": {
+        "id": "UIsFqRv2f1Yw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### List methods\n",
+        "\n",
+        "Python has a number of methods specific to lists:\n",
+        "\n",
+        "- <list>.append() - add element to END of list\n",
+        "- <list>.sort(<function>) - sort the list.\n",
+        "- <list>.reverse() - reverse the list\n",
+        "- <list>.index(x) - return the index of the first occurrence of x\n",
+        "- <list>.insert(i, x) - insert element x into the list at index i\n",
+        "- <list.count(x) - returns the number of occurrences of x in the list\n",
+        "- <list>.remove(x) - delete the first occurrence of x in the list\n",
+        "- <list>.pop(i) - deletes the ith element from the list and returns its value"
+      ],
+      "metadata": {
+        "id": "XeDZ0YqKf_Qt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Tuples\n",
+        "- read-only sequence. items can't be modified\n",
+        "-ndefined with parens instead of brackets\n",
+        "- similar behavior as lists"
+      ],
+      "metadata": {
+        "id": "hPlpfb5sgU68"
+      }
     }
   ]
 }
