--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnyxUfCMvR4Id9PUUDOmcD",
+      "authorship_tag": "ABX9TyPY8iCrTjUq6HiSit5uPu8n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "RSVfQbVdaedX"
       },
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "MxNqHgW1b7-G"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "id": "_xsqxqx1cBUl",
         "outputId": "82434046-5a5e-4713-f276-321aa43624d2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "id": "4ru8HaBkcuE4",
         "outputId": "10f36e54-7908-403c-b0d0-933ca6d6993e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +220,7 @@
         "id": "CWlHnYrTdIws",
         "outputId": "b039e657-ac3d-450d-b099-4a9383f48a96"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
         "id": "pehSfZjjdcM9",
         "outputId": "dce82408-cc3f-48f5-8646-972a6db9f5db"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +292,7 @@
         "id": "ffN_7OpLfT0H",
         "outputId": "b7dc3a89-6c63-4a9b-cc8d-8e5701799a04"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +330,7 @@
         "id": "zNsarN-EfkVr",
         "outputId": "d1f6061d-954c-46f0-c20b-5a72ba66ad25"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,11 +382,27 @@
       "source": [
         "### Tuples\n",
         "- read-only sequence. items can't be modified\n",
-        "-ndefined with parens instead of brackets\n",
+        "- defined with parens instead of brackets\n",
         "- similar behavior as lists"
       ],
       "metadata": {
         "id": "hPlpfb5sgU68"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dictionaries\n",
+        "\n",
+        "- Similar to hashes or associative arrays in other languages\n",
+        "- Data are stored as `key-value pairs`\n",
+        "- values are `mapped` to unique keys\n",
+        "- keys must be strings\n",
+        "- Values can be any valid Python data type\n",
+        "- Key-value pairs not stored in any order (**very important**)"
+      ],
+      "metadata": {
+        "id": "O4zu7Tf8g0Ui"
       }
     }
   ]
