--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPY8iCrTjUq6HiSit5uPu8n",
+      "authorship_tag": "ABX9TyPXR3RHDX7NHOi5c0QB9nPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -398,11 +398,87 @@
         "- Data are stored as `key-value pairs`\n",
         "- values are `mapped` to unique keys\n",
         "- keys must be strings\n",
-        "- Values can be any valid Python data type\n",
-        "- Key-value pairs not stored in any order (**very important**)"
+        "- Values can be any valid Python data type"
       ],
       "metadata": {
         "id": "O4zu7Tf8g0Ui"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "student = { 'name' : 'sara', 'age': 23 }"
+      ],
+      "metadata": {
+        "id": "iQTcebP-imTS",
+        "outputId": "a414bb79-0eb8-4747-b91e-7685776e5a54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sara\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Key-value pairs not stored in any order (**very important**)\n",
+        "\n",
+        "So dictionary values have NO sequence or index.\n",
+        "\n",
+        "Instead values are retrieved by `key`;"
+      ],
+      "metadata": {
+        "id": "97N7tPNWi0ST"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(student[\"name\"])"
+      ],
+      "metadata": {
+        "id": "QdYLF7r-jI4A",
+        "outputId": "c81a6d51-acd5-435c-88ce-d9eebcba08cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sara\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Dictionary methods**\n",
+        "\n",
+        "- <key> in <dict> - returns True if <key> is in <dict>\n",
+        "- <dict>.keys() - return a sequence of keys\n",
+        "- <dict>.values() - return a sequence of values\n",
+        "- <dict>.items() - return a sequence of tuples representing key-value pairs\n",
+        "- <dict>.get(<key>, <default>) - return the specified key or a default value\n",
+        "- del <dict>[<key>] - delete the specified key\n",
+        "- for <var> in <dict> - iterate over the keys\n",
+        "- <dict>.clear() - delete all dictionary items"
+      ],
+      "metadata": {
+        "id": "zVPwIXgfiRnx"
       }
     }
   ]
