--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXR3RHDX7NHOi5c0QB9nPs",
+      "authorship_tag": "ABX9TyOGhwLTDU1hmunXyEGRu5o1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -410,11 +410,11 @@
         "student = { 'name' : 'sara', 'age': 23 }"
       ],
       "metadata": {
-        "id": "iQTcebP-imTS",
-        "outputId": "a414bb79-0eb8-4747-b91e-7685776e5a54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iQTcebP-imTS",
+        "outputId": "a414bb79-0eb8-4747-b91e-7685776e5a54"
       },
       "execution_count": 1,
       "outputs": [
@@ -446,11 +446,11 @@
         "print(student[\"name\"])"
       ],
       "metadata": {
-        "id": "QdYLF7r-jI4A",
-        "outputId": "c81a6d51-acd5-435c-88ce-d9eebcba08cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QdYLF7r-jI4A",
+        "outputId": "c81a6d51-acd5-435c-88ce-d9eebcba08cb"
       },
       "execution_count": 2,
       "outputs": [
@@ -479,6 +479,58 @@
       ],
       "metadata": {
         "id": "zVPwIXgfiRnx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sets\n",
+        "\n",
+        "A set is a collection of `unique` items, similar to a list but with no duplicates. Multiple items added to a set are removed."
+      ],
+      "metadata": {
+        "id": "xqFOZDZDlEkR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = set(['ann','bob','chris','ann'])\n",
+        "print(names)"
+      ],
+      "metadata": {
+        "id": "pYaZfSHGlMp-",
+        "outputId": "451b7093-271f-4bc3-dd25-ce67a8b8c22a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'bob', 'chris', 'ann'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python sets are modeled after sets in mathematics and support efficient comparison operations:\n",
+        "\n",
+        "- test if a set is a subset of another set\n",
+        "\n",
+        "- test if a set is a super-set of another set\n",
+        "\n",
+        "- difference between two sets\n",
+        "\n",
+        "- intersection of two sets"
+      ],
+      "metadata": {
+        "id": "4Z85J9h9lUUG"
       }
     }
   ]
