--- a/5_files.ipynb
+++ b/5_files.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNouBR9XAQ/g8281f7Vdq/u",
+      "authorship_tag": "ABX9TyPN59V5tQEZz61kzUhLjbSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
         "### Reading\n",
         "\n",
         "- https://www.tutorialspoint.com/python/python_file_handling.htm\n",
-        "- https://www.tutorialspoint.com/python/python_string_methods.htm"
+        "- https://www.tutorialspoint.com/python/python_string_methods.htm\n",
+        "- https://allendowney.github.io/ThinkPython/chap13.html"
       ],
       "metadata": {
         "id": "_oAmcWfbuk8-"
@@ -88,7 +89,7 @@
       "metadata": {
         "id": "_Zl9WARZsFu_"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +125,7 @@
         "id": "wedv55WJtC44",
         "outputId": "4f9a10a5-4aaf-4207-faef-fdae2fcf946e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +159,7 @@
         "id": "m7R9kIZj5nv1",
         "outputId": "b88c42cb-f623-421f-8d7c-1ec1250b2ed1"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
