--- a/6_collections.ipynb
+++ b/6_collections.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGhwLTDU1hmunXyEGRu5o1",
+      "authorship_tag": "ABX9TyMxRGzFkyzb10K6iyc66p2z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,9 @@
       "source": [
         "### Reading\n",
         "- https://www.tutorialspoint.com/python/python_lists.htm\n",
+        "- https://allendowney.github.io/ThinkPython/chap09.html\n",
         "- https://www.tutorialspoint.com/python/python_dictionary.htm\n",
+        "- https://allendowney.github.io/ThinkPython/chap10.html\n",
         "- https://www.tutorialspoint.com/python/python_tuples.htm\n",
         "- https://www.tutorialspoint.com/python/python_sets.htm\n",
         "\n",
@@ -84,14 +86,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "RSVfQbVdaedX"
       },
       "outputs": [],
       "source": [
         "mylist = [1,2,3,4]\n",
-        "emptylist = []"
+        "emptylist = []\n",
+        "word = \"abcdef\"\n",
+        "numbers = range(10)"
       ]
     },
     {
@@ -111,7 +115,7 @@
       "metadata": {
         "id": "MxNqHgW1b7-G"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -136,15 +140,15 @@
           "height": 53
         },
         "id": "_xsqxqx1cBUl",
-        "outputId": "82434046-5a5e-4713-f276-321aa43624d2"
+        "outputId": "f511fc1e-9f76-48d5-9664-2d4b950cac69"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "dog\n"
+            "cat\n"
           ]
         },
         {
@@ -158,7 +162,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -174,22 +178,23 @@
     {
       "cell_type": "code",
       "source": [
-        "mylist[1:2]"
+        "mylist[1:3]\n",
+        "mylist[:3]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4ru8HaBkcuE4",
-        "outputId": "10f36e54-7908-403c-b0d0-933ca6d6993e"
+        "outputId": "1a00f699-9900-400f-a69f-c744ddc7b767"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2]"
+              "['dog', 2, True]"
             ]
           },
           "metadata": {},
@@ -210,7 +215,7 @@
       "cell_type": "code",
       "source": [
         "mylist = [1,2,3,4,5]\n",
-        "del mylist[0]\n",
+        "del mylist[1:3]\n",
         "print(mylist)"
       ],
       "metadata": {
@@ -218,15 +223,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CWlHnYrTdIws",
-        "outputId": "b039e657-ac3d-450d-b099-4a9383f48a96"
+        "outputId": "d4d89b46-d909-4495-a442-f903c1b69a52"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[2, 3, 4, 5]\n"
+            "[1, 4, 5]\n"
           ]
         }
       ]
@@ -320,17 +325,17 @@
     {
       "cell_type": "code",
       "source": [
-        "list1 = ['a','b','c']\n",
-        "'a' in list1"
+        "vowels = 'aeiou'\n",
+        "'ae' in vowels"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zNsarN-EfkVr",
-        "outputId": "d1f6061d-954c-46f0-c20b-5a72ba66ad25"
+        "outputId": "c531bfce-b907-456a-fc51-9c6b4e7e674b"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +345,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -348,10 +353,10 @@
       "cell_type": "markdown",
       "source": [
         "Other built-in Python methods relevant for lists:\n",
-        "- max(<list>)\n",
-        "- min(<list>)\n",
-        "- cmp(<list1>, <list2>)\n",
-        "- list<tuple>) - converts a tuple to a list"
+        "- max(\\<list>)\n",
+        "- min(\\<list>)\n",
+        "- cmp(\\<list1>, \\<list2>)\n",
+        "- list(\\<tuple>) - converts a tuple to a list"
       ],
       "metadata": {
         "id": "UIsFqRv2f1Yw"
@@ -369,13 +374,39 @@
         "- <list>.reverse() - reverse the list\n",
         "- <list>.index(x) - return the index of the first occurrence of x\n",
         "- <list>.insert(i, x) - insert element x into the list at index i\n",
-        "- <list.count(x) - returns the number of occurrences of x in the list\n",
+        "- <list>.count(x) - returns the number of occurrences of x in the list\n",
         "- <list>.remove(x) - delete the first occurrence of x in the list\n",
         "- <list>.pop(i) - deletes the ith element from the list and returns its value"
       ],
       "metadata": {
         "id": "XeDZ0YqKf_Qt"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = ['able','bob','cindy','Andrew']\n",
+        "names.sort()\n",
+        "name = names.pop(2)\n",
+        "print(names, name)"
+      ],
+      "metadata": {
+        "id": "6wF8CkBT8SHo",
+        "outputId": "0b8b1060-049c-496e-d791-067a5423e607",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Andrew', 'able', 'cindy'] bob\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -410,22 +441,10 @@
         "student = { 'name' : 'sara', 'age': 23 }"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iQTcebP-imTS",
-        "outputId": "a414bb79-0eb8-4747-b91e-7685776e5a54"
+        "id": "iQTcebP-imTS"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "sara\n"
-          ]
-        }
-      ]
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -443,22 +462,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(student[\"name\"])"
+        "print(student[\"name\"])\n",
+        "print(student.get(\"major\",\"Gen Ed\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QdYLF7r-jI4A",
-        "outputId": "c81a6d51-acd5-435c-88ce-d9eebcba08cb"
+        "outputId": "b3b6fdf8-fdf7-4301-85de-e3b1c56f0a8a"
       },
-      "execution_count": 2,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "sara\n"
+            "sara\n",
+            "Gen Ed\n"
           ]
         }
       ]
@@ -468,18 +489,44 @@
       "source": [
         "**Dictionary methods**\n",
         "\n",
-        "- <key> in <dict> - returns True if <key> is in <dict>\n",
-        "- <dict>.keys() - return a sequence of keys\n",
-        "- <dict>.values() - return a sequence of values\n",
-        "- <dict>.items() - return a sequence of tuples representing key-value pairs\n",
-        "- <dict>.get(<key>, <default>) - return the specified key or a default value\n",
-        "- del <dict>[<key>] - delete the specified key\n",
-        "- for <var> in <dict> - iterate over the keys\n",
-        "- <dict>.clear() - delete all dictionary items"
+        "- \\<key> in \\<dict> - returns True if \\<key> is in \\<dict>\n",
+        "- \\<dict>.keys() - return a sequence of keys\n",
+        "- \\<dict>.values() - return a sequence of values\n",
+        "- \\<dict>.items() - return a sequence of tuples representing key-value pairs\n",
+        "- \\<dict>.get(\\<key>, \\<default>) - return the specified key or a default value\n",
+        "- del \\<dict>[<key>] - delete the specified key\n",
+        "- for \\<var> in \\<dict> - iterate over the keys\n",
+        "- \\<dict>.clear() - delete all dictionary items"
       ],
       "metadata": {
         "id": "zVPwIXgfiRnx"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(student.items())"
+      ],
+      "metadata": {
+        "id": "599A5JjL_LtC",
+        "outputId": "9783e2b6-7729-4059-b04c-cd9d7d318e98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('name', 'sara'), ('age', 23)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -505,7 +552,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
