--- a/7_classes_objects.ipynb
+++ b/7_classes_objects.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcmI1+/hv8/R/Vtuzt5sPB",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNAJjOEY8guEY1ddSaKxZU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +46,7 @@
         "### Learning outcomes\n",
         "- What are classes & objects?\n",
         "- Defining Python classes\n",
+        "- Class inheritance\n",
         "- Importing Python classes"
       ],
       "metadata": {
@@ -91,13 +93,93 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "### Class definition\n",
+        "\n",
+        "Classes are defined with the `class` keyword and usually name is capitalized.\n",
+        "\n",
+        "Classes can have `default` methods defined in Python with `__name__` synatax. For example:\n",
+        "\n",
+        "- Class definition usually includes a constructor (aka `__init__`) method for initializing new instances with default values.\n",
+        "- The method `__repr__` is invoked by the print() command and must return a string value.\n",
+        "\n",
+        "Python class methods expect `self`, which refers to the object being created, as the first input parameter."
+      ],
       "metadata": {
-        "id": "vR7GcmkcrRsa"
+        "id": "yPSaAhv5v_Ig"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "\n",
+        "  # constructor method to create new class instance\n",
+        "  def __init__(self,first,last,major):\n",
+        "    self.first_name = first\n",
+        "    self.last_name = last\n",
+        "    self.major = major\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return f\"{self.last_name}, {self.first_name} - major: {self.major}\"\n",
+        "\n",
+        "  # print student name\n",
+        "  def fullName(self):\n",
+        "    return f\"{self.first_name} {self.last_name}\""
+      ],
+      "metadata": {
+        "id": "aKmXCqkiv2cu"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Objects\n",
+        "\n",
+        "Objects are specific instances of a class. Objects of the same class are distinct & different."
+      ],
+      "metadata": {
+        "id": "zZndUKSY1Aap"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vR7GcmkcrRsa",
+        "outputId": "18c201f0-b9ad-4e67-8ec6-9708ca0fca15"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Smith, Jane - major: Art\n",
+            "Taylor, Mike - major: Theater\n"
+          ]
+        }
+      ],
+      "source": [
+        "jane = Student(\"Jane\", \"Smith\", \"Art\")\n",
+        "mike = Student(\"Mike\", \"Taylor\", \"Theater\")\n",
+        "print(jane)\n",
+        "print(mike)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sYhdETSWxx5d"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
