--- a/7_classes_objects.ipynb
+++ b/7_classes_objects.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNAJjOEY8guEY1ddSaKxZU2",
+      "authorship_tag": "ABX9TyOMnINHmt8p2qkiSUGpqgeI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,16 +112,15 @@
     {
       "cell_type": "code",
       "source": [
-        "class Student:\n",
+        "class Person:\n",
         "\n",
         "  # constructor method to create new class instance\n",
-        "  def __init__(self,first,last,major):\n",
+        "  def __init__(self,first,last):\n",
         "    self.first_name = first\n",
         "    self.last_name = last\n",
-        "    self.major = major\n",
         "\n",
         "  def __repr__(self):\n",
-        "    return f\"{self.last_name}, {self.first_name} - major: {self.major}\"\n",
+        "    return f\"{self.last_name}, {self.first_name}\"\n",
         "\n",
         "  # print student name\n",
         "  def fullName(self):\n",
@@ -131,7 +129,7 @@
       "metadata": {
         "id": "aKmXCqkiv2cu"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -153,33 +151,118 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vR7GcmkcrRsa",
-        "outputId": "18c201f0-b9ad-4e67-8ec6-9708ca0fca15"
+        "outputId": "e012e523-2afd-4a09-ed5e-b5969bf63ed9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Smith, Jane - major: Art\n",
-            "Taylor, Mike - major: Theater\n"
+            "Smith, Jane\n",
+            "Taylor, Mike\n"
           ]
         }
       ],
       "source": [
-        "jane = Student(\"Jane\", \"Smith\", \"Art\")\n",
-        "mike = Student(\"Mike\", \"Taylor\", \"Theater\")\n",
+        "jane = Person(\"Jane\", \"Smith\")\n",
+        "mike = Person(\"Mike\", \"Taylor\")\n",
         "print(jane)\n",
         "print(mike)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(jane.fullName())\n",
+        "print(mike.fullName())"
+      ],
       "metadata": {
-        "id": "sYhdETSWxx5d"
+        "id": "sYhdETSWxx5d",
+        "outputId": "453cdf97-afe3-48cf-eb4d-8f4b1c95ddad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jane Smith\n",
+            "Mike Taylor\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student(Person):\n",
+        "\n",
+        "  # class attribute\n",
+        "  count = 0\n",
+        "\n",
+        "  # constructor method to create new class instance\n",
+        "  def __init__(self,first,last,major):\n",
+        "    super().__init__(first, last)\n",
+        "    self.major = major\n",
+        "    Student.count += 1\n",
+        "    self.id = Student.count\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return f\"{self.id} - {self.last_name}, {self.first_name} - major: {self.major}\"\n",
+        "\n",
+        "class Faculty(Person):\n",
+        "\n",
+        "  # class attribute\n",
+        "  count = 0\n",
+        "\n",
+        "  # constructor method to create new class instance\n",
+        "  def __init__(self,first,last,dept):\n",
+        "    super().__init__(first, last)\n",
+        "    self.dept = dept\n",
+        "    Faculty.count += 1\n",
+        "    self.id = Faculty.count\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return f\"{self.id} - {self.last_name}, {self.first_name} - department: {self.dept}\"\n"
+      ],
+      "metadata": {
+        "id": "TiJRKyZmBTKh"
+      },
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hakim = Student(\"Hakim\", \"Salah\", \"Science\")\n",
+        "print(hakim)\n",
+        "print(hakim.fullName())\n",
+        "\n",
+        "jones = Faculty(\"George\", \"Jones\", \"Math\")\n",
+        "print(jones)"
+      ],
+      "metadata": {
+        "id": "sa37op86COu6",
+        "outputId": "075e8b2d-ca38-4acb-e641-c403b7aa8d75",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 - Salah, Hakim - major: Science\n",
+            "Hakim Salah\n",
+            "1 - Jones, George - department: Math\n"
+          ]
+        }
+      ]
     }
   ]
 }
