--- a/7_classes_objects.ipynb
+++ b/7_classes_objects.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMnINHmt8p2qkiSUGpqgeI",
+      "authorship_tag": "ABX9TyPifzmyISQH7XUS2gIClyXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,10 +178,10 @@
       ],
       "metadata": {
         "id": "sYhdETSWxx5d",
-        "outputId": "453cdf97-afe3-48cf-eb4d-8f4b1c95ddad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "453cdf97-afe3-48cf-eb4d-8f4b1c95ddad"
       },
       "execution_count": 16,
       "outputs": [
@@ -196,6 +196,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Inheritance\n",
+        "\n",
+        "Classes can `inherit` from a `base` or `parent` class. This allows multiple `child` classes to use common parent functionality rather than create duplicate definitions.\n",
+        "\n",
+        "In this example, `Student` and `Faculty` classes each inherit from `Person`. They have access to attributes and methods from that common parent, but also define attributes specific to themselves."
+      ],
+      "metadata": {
+        "id": "qvVJZ7SuHO_L"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class Student(Person):\n",
@@ -203,9 +216,10 @@
         "  # class attribute\n",
         "  count = 0\n",
         "\n",
-        "  # constructor method to create new class instance\n",
         "  def __init__(self,first,last,major):\n",
+        "    # create an instance of the Person class\n",
         "    super().__init__(first, last)\n",
+        "    # define Student-specific attributes\n",
         "    self.major = major\n",
         "    Student.count += 1\n",
         "    self.id = Student.count\n",
@@ -218,9 +232,10 @@
         "  # class attribute\n",
         "  count = 0\n",
         "\n",
-        "  # constructor method to create new class instance\n",
         "  def __init__(self,first,last,dept):\n",
+        "    # create an instance of the Person class\n",
         "    super().__init__(first, last)\n",
+        "    # define Faculty-specific attributes\n",
         "    self.dept = dept\n",
         "    Faculty.count += 1\n",
         "    self.id = Faculty.count\n",
@@ -231,7 +246,7 @@
       "metadata": {
         "id": "TiJRKyZmBTKh"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -245,13 +260,13 @@
         "print(jones)"
       ],
       "metadata": {
-        "id": "sa37op86COu6",
-        "outputId": "075e8b2d-ca38-4acb-e641-c403b7aa8d75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sa37op86COu6",
+        "outputId": "453ebc3f-18c2-4ab2-b112-7d86998a7cce"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,6 +278,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Python Modules\n",
+        "\n",
+        "Python classes are often organized in `modules`"
+      ],
+      "metadata": {
+        "id": "zgdiCeDVIjAX"
+      }
     }
   ]
 }
